fixing white spaces

--- a/style.css
+++ b/style.css
@@ -81,7 +81,7 @@ body {
 .intro {
 	width: 55%;
 	margin: auto;
-	padding-top: 115px;
+	padding-top: 95px;
 	line-height: 190%;
 }
 
